<resources>
    <string name="app_name">Search Engine</string>
    <string name="title_search">Search</string>
    <string name="title_images">Images</string>
    <string name="title_trends">Trends</string>
    <string name="no_more_results">No more results</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="title_home">Home</string>
    <string name="country_label">Country:</string>
    <string name="user_id_label">User ID:</string>
    <string name="welcome">Welcome</string>
    <string name="no_trends">No Trends for Now</string>
    <string name="internal_server_error">Internal Server Error</string>
</resources>
