<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ayman.searchengine.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ayman.searchengine.ui.search.text_search.TextSearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_images"
        android:name="com.ayman.searchengine.ui.search.image_search.ImageSearchFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigation_trends"
        android:name="com.ayman.searchengine.ui.trends.TrendsFragment"
        android:label="@string/title_trends"
        tools:layout="@layout/fragment_trends" />
</navigation>
